backend/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: kraoq
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraoq-backend-ingress
  namespace: kraoq
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Redirect HTTP to HTTPS
    traefik.ingress.kubernetes.io/router.middlewares: kraoq-redirect-https@kubernetescrd
spec:
  tls:
  - {} # Use default (self-signed) cert
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kraoq-backend-service
            port:
              number: 80
